--- a/views/admin/pengelolaan.ejs
+++ b/views/admin/pengelolaan.ejs
@@ -8,25 +8,31 @@
   </head>
   <body>
     <div class="sidebar">
-      <div class="circle"></div>
+      <div class="contcircle">
+        <div class="circle">
+          <img src="/Gambar/profile.png" alt="">
+        </div>
+      </div>
       <div class="keterangan">
         <a href="/admin/profile">
-          <span><%= user.jurusan %></span>
+          <div class="nama"><%= user.jurusan %></div>
         </a>
       </div>
       <div class="isi">
-        <a href="dashboard"><h4>Dashboard</h4></a><br />
-        <a href="pengelolaan"><h4 class="dashboard">Pengelolaan</h4></a><br />
-        <a href=""><h4>History</h4></a><br />
-        <form id="logoutForm" action="/logout" method="POST">
-          <button
-            type="submit"
-            onclick="logout()"
-            style="background: none; border: none; cursor: pointer"
-          >
-            <h4>Logout</h4>
-          </button>
-        </form>
+        <div class="isi2">
+          <a href="dashboard"><h4>Dashboard</h4></a><br />
+          <a href="pengelolaan"><h4 class="dashboard">Pengelolaan</h4></a><br />
+          <a href="historyAdmin"><h4>History</h4></a><br />
+          <form id="logoutForm" action="/logout" method="POST">
+            <button
+              type="submit"
+              onclick="logout()"
+              style="background: none; border: none; cursor: pointer"
+            >
+              <h4>Logout</h4>
+            </button>
+          </form>
+        </div>
         <div class="titik"></div>
       </div>
     </div>
@@ -34,34 +40,41 @@
     <div class="container">
       <div class="container2">
         <h3>Pengelolaan Pengajuan</h3>
-        <div class="atas">
-          <div class="pengajuan">
-            <h1>Pengajuan</h1>
-            <hr />
-            <a href="listPengajuan" class="more">more info</a>
+        <div class="container3">
+          <div class="atas">
+            <div class="pengajuan">
+              <h2><%= countDiproses %></h2>
+              <h1>Pengajuan</h1>
+              <hr />
+              <a href="listPengajuan" class="more">more info</a>
+            </div>
+            <div class="disetujui">
+              <h2><%= countDiterima %></h2>
+              <h1>Disetujui</h1>
+              <hr />
+              <a href="listDisetujui" class="more">more info</a>
+            </div>
           </div>
-          <div class="disetujui">
-            <h1>Disetujui</h1>
-            <hr />
-            <a href="listDisetujui" class="more">Disetujui</a>
+          <div class="bawah">
+            <div class="ditolak">
+              <h2><%= countDitolak %></h2>
+              <h1>Ditolak</h1>
+              <hr />
+              <a href="listDitolak" class="more">more info</a>
+            </div>
+            <div class="history">
+              <h1>History</h1>
+              <hr />
+              <a href="history" class="more">more info</a>
+            </div>
           </div>
         </div>
-        <div class="bawah">
-          <div class="ditolak">
-            <h1>Ditolak</h1>
-            <hr />
-            <a href="listDitolak" class="more">Ditolak</a>
-          </div>
-          <div class="history">
-            <h1>History</h1>
-            <hr />
-            <a href="history" class="more">History</a>
-          </div>
-        </div>
+        
       </div>
     </div>
 
     <script>
+      
       function logout() {
         fetch("/logout", {
           method: "DELETE",
