--- a/views/admin/profile.ejs
+++ b/views/admin/profile.ejs
@@ -7,40 +7,50 @@
 </head>
 <body>
     <div class="sidebar">
-        <div class="circle"></div>
+        <div class="contcircle">
+          <div class="circle">
+            <img src="/Gambar/profile.png" alt="">
+          </div>
+        </div>
         <div class="keterangan">
-            <a href="/admin/profile">
-                <span class="link"><%= user.jurusan %></span>
-                </a>
+          <a href="/admin/profile">
+            <span><%= user.jurusan %></span>
+          </a>
         </div>
         <div class="isi">
-            <a href=""><h4 class="dashboard">Dashboard</h4></a><br>
-            <a href=""><h4>Pengelolaan</h4></a><br>
-            <a href=""><h4>History</h4></a><br>
+          <div class="isi2">
+            <a href="dashboard"><h4 class="dashboard">Dashboard</h4></a><br />
+            <a href="pengelolaan"><h4>Pengelolaan</h4></a><br />
+            <a href="historyAdmin"><h4>History</h4></a><br />
             <form id="logoutForm" action="/logout" method="POST">
-                <button type="submit" onclick="logout()" style="background:none; border:none; cursor:pointer;"><h4>Logout</h4></button>
+              <button
+                type="submit"
+                onclick="logout()"
+                style="background: none; border: none; cursor: pointer"
+              >
+                <h4>Logout</h4>
+              </button>
             </form>
-            <div class="titik"></div>
+          </div>
+          <div class="titik"></div>
         </div>
-    </div>
-    <div class="container">
-        <div class="profile-card bg-white">
-            <div class="profile-header">Profile</div>
-            <div class="profile-field">
-                <label>Name:</label>
-                <span><%= user.nama %></span>
-            </div>
-            <div class="profile-field">
-                <label>Email:</label>
-                <span><%= user.email %></span>
-            </div>
-            <div class="profile-field">
-                <label>Fakultas:</label>
-                <span><%= user.fakultas %></span>
-            </div>
-            <div class="profile-field">
-                <label>Jurusan:</label>
-                <span><%= user.jurusan %></span>
+      </div>
+      <div class="container">
+        <div class="container2">
+            <div class="profile-card bg-white">
+                <div class="profile-header">Profile</div>
+                <div class="profile-field">
+                    <label>Email:</label>
+                    <span><%= user.email %></span>
+                </div>
+                <div class="profile-field">
+                    <label>Fakultas:</label>
+                    <span><%= user.fakultas %></span>
+                </div>
+                <div class="profile-field">
+                    <label>Jurusan:</label>
+                    <span><%= user.jurusan %></span>
+                </div>
             </div>
         </div>
     </div>
