--- a/views/dosen/nilai.ejs
+++ b/views/dosen/nilai.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Input Nilai</title>
     <link rel="stylesheet" href="/nilai.css">
 </head>
 <body>
@@ -30,8 +30,8 @@
     </div>
     <div class="container">
         <div class="container2">
-            <h2>Input Nilai Mahasiswa</h2>
-
+            <h1>Input Nilai Mahasiswa</h1>
+        <div class="container3">
             <div class="judul1">
                 <h3>Tahun Ajaran</h3>
             </div>
@@ -115,6 +115,7 @@
         <button class="update" type="submit">Update</button>
         </div>
     </form>
+    </div>
     </div>
 </div>
 
