--- a/public/listPengajuan.css
+++ b/public/listPengajuan.css
@@ -24,11 +24,12 @@ body{
     align-items: center;
     display: flex;
     font-family: 'Montserrat';
+    width: 100%;
 }
 
 .sidebar{
     margin-left: 15px;
-    max-width: 250px;
+    max-width: 220px;
     width: 100%;
     height: 93%;
     background-color: #233323;
@@ -37,14 +38,29 @@ body{
 }
 
 .circle {
-    height: 90px;
-    width: 90px;
+    height: 75px;
+    width: 75px;
     background-color: #ffffff;
     border-radius: 50%;
+}
+
+.contcircle{
     position: absolute;
-    margin-top: 40px;
-    margin-left: 78px;
-  }
+    width: 100%;
+    max-width: 220px;
+    display: flex;
+    justify-content: center; 
+    align-items: center;     
+    text-align: center;     
+    height: 100%;   
+    margin-top: -280px;
+}
+
+img{
+    height: 76px;
+    width: 76px;
+    border-radius: 50%;
+}
 
 .titik{
     background-color: #c6e29d;
@@ -53,8 +69,7 @@ body{
     max-height: 100%;
     height: 32px;
     border-radius: 0px 6px 6px 0px;
-    margin-left: 0px;
-    margin-top: -76.5%;
+    margin-top: -142px;
     position: absolute;
     z-index: 2;
 
@@ -62,7 +77,9 @@ body{
 
 h1{
     font-size: 25px;
-    margin-top: 20px;
+    margin-top: 40px;
+    margin-left: 40px;
+    position: absolute;
 }
 
 h4{
@@ -91,31 +108,54 @@ a{
     position: absolute;
 }
 
+.isi{
+    margin-top: 240px;
+    position: absolute;
+    justify-content: center; 
+    align-items: center;     
+    text-align: center;  
+    width: 100%;
+    max-width: 220px;
+}
+
+.isi2{
+    margin-left: -8px;
+}
+
 .container{
     width: 100%;
     max-width: 2500px;
     height: 100%;
     background-color: #ffffff6c;
     z-index: 1;
-    margin-left: -265px;
+    margin-left: -235px;
 }
 
-.keterangan{
+.keterangan {
     position: absolute;
-    margin-top: 150px;
-    color: #ffffff;
-    margin-left: 49px;
+    width: 100%;
+    max-width: 220px;
+    display: flex;
+    justify-content: center; 
+    align-items: center;     
+    text-align: center;     
+    height: 100%;   
+    margin-top: -200px;
+}
+
+form{
+    margin-left: -95px;
+}
+
+
+.nama {
+    margin: auto;
+    color: #c6e29d;
 }
 
 .jurusan{
     margin-left: 36px;
     margin-top: 7px;
-}
-
-span{
-    color: #c6e29d;
-    margin-left: 11px;
-    margin-top: 5px;
 }
 
 .container2{
@@ -132,13 +172,16 @@ span{
     z-index: 3;
     text-align: center; 
 }
+
 table{
     border-collapse: collapse;
     margin: auto;
     margin-top: 50px;
+    width: 1125px;
 }
   table td, table th {
     padding: 8px;
+    text-align: start;
   }
   
   table tr:nth-child(even){background-color: #f4faeb;}
@@ -152,3 +195,7 @@ table{
     background-color: #deedc8;
     color: #233323;
   }
+
+.list-pengajuan{
+    margin-top: 110px;
+}
