--- a/public/pengajuan.css
+++ b/public/pengajuan.css
@@ -217,3 +217,29 @@ form{
     background-color: #233323;
 }
 
+.file{
+    position: relative;
+    margin-left: 10px;
+    margin-top: 8px;
+    font-family: Montserrat;
+    font-weight: 500;
+}
+
+.divfile{
+    width: 100%;
+    height: 40px;
+    max-width: 250px;
+    margin-left: 138px;
+    background-color: #ffffff;
+    border-radius: 20px;
+}
+
+input::file-selector-button {
+    border-radius: 10px;
+    border-style: none;
+    color: #ffffff;
+    background-color: #233323;
+    padding: 4px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
