--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -8,29 +8,41 @@
   </head>
   <body>
     <div class="sidebar">
-      <div class="circle"></div>
+      <div class="contcircle">
+        <div class="circle">
+          <img src="/Gambar/profile.png" alt="">
+        </div>
+      </div>
       <div class="keterangan">
         <a href="/admin/profile">
           <span><%= user.jurusan %></span>
         </a>
       </div>
       <div class="isi">
-        <a href=""><h4 class="dashboard">Dashboard</h4></a><br />
-        <a href="pengelolaan"><h4>Pengelolaan</h4></a><br />
-        <a href=""><h4>History</h4></a><br />
-        <form id="logoutForm" action="/logout" method="POST">
-          <button
-            type="submit"
-            onclick="logout()"
-            style="background: none; border: none; cursor: pointer"
-          >
-            <h4>Logout</h4>
-          </button>
-        </form>
+        <div class="isi2">
+          <a href="dashboard"><h4 class="dashboard">Dashboard</h4></a><br />
+          <a href="pengelolaan"><h4>Pengelolaan</h4></a><br />
+          <a href="historyAdmin"><h4>History</h4></a><br />
+          <form id="logoutForm" action="/logout" method="POST">
+            <button
+              type="submit"
+              onclick="logout()"
+              style="background: none; border: none; cursor: pointer"
+            >
+              <h4>Logout</h4>
+            </button>
+          </form>
+        </div>
         <div class="titik"></div>
       </div>
     </div>
-    <div class="container"></div>
+    <div class="container">
+      <div class="container2">
+        <h1>Selamat Datang!</h1>
+        <h3>Lihat pengajuan</h3>
+        <a href="/admin/pengelolaan"><button class="mulai">Lihat</button></a>
+      </div>
+    </div>
     <script>
       function logout() {
         fetch("/logout", {
