--- a/views/admin/listPengajuan.ejs
+++ b/views/admin/listPengajuan.ejs
@@ -41,6 +41,30 @@
       <div class="container2">
         <h1>List Pengajuan</h1>
         <div class="list-pengajuan">
+
+
+          <div class="card" >
+            <div class="content">
+                <span>dd/mm/yyyy - [NIM/Nama Mahasiswa]</span>
+                <button class="status-button">Diproses</button>
+                <button class="toggle-button">▼</button>
+            </div>
+        </div>
+        <div class="card">
+            <div class="content">
+                <span>dd/mm/yyyy - [NIM/Nama Mahasiswa]</span>
+                <button class="status-button">Diproses</button>
+                <button class="toggle-button">▼</button>
+            </div>
+        </div>
+        <div class="card">
+            <div class="content">
+                <span>dd/mm/yyyy - [NIM/Nama Mahasiswa]</span>
+                <button class="status-button">Diproses</button>
+                <button class="toggle-button">▼</button>
+            </div>
+        </div>
+
           <table>
             <thead>
               <tr>
