Pesan : Router History

--- a/views/admin/historyAdmin.ejs
+++ b/views/admin/historyAdmin.ejs
@@ -21,8 +21,8 @@
       <div class="isi">
         <div class="isi2">
           <a href="dashboard"><h4>Dashboard</h4></a><br />
-          <a href="pengelolaan"><h4 class="dashboard">Pengelolaan</h4></a><br />
-          <a href="historyAdmin"><h4>History</h4></a><br />
+          <a href="pengelolaan"><h4>Pengelolaan</h4></a><br />
+          <a href="historyAdmin"><h4 class="dashboard">History</h4></a><br />
           <form id="logoutForm" action="/logout" method="POST">
             <button
               type="submit"
@@ -39,7 +39,7 @@
 
     <div class="container">
       <div class="container2">
-        <h1>List Pengajuan</h1>
+        <h1>History</h1>
         <div class="list-pengajuan">
 
           <div class="card" >
