--- a/views/admin/pengelolaan.ejs
+++ b/views/admin/pengelolaan.ejs
@@ -65,7 +65,7 @@
             <div class="history">
               <h1>History</h1>
               <hr />
-              <a href="history" class="more">more info</a>
+              <a href="historyAdmin" class="more">more info</a>
             </div>
           </div>
         </div>
